syntax = "proto3";

package profile;

service AuthService {
  rpc login (AuthRequest) returns (AuthReply) {}
}

message AuthRequest {
  string id = 1;
  string password = 2;
  string email = 3;
}

message AuthReply {
  string result = 1;
}