syntax = "proto3";

package request_models;


message RegistrationRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message LoginRequest {
    string email = 1;
    string password = 3;
}

