syntax = "proto3";

package response_models;

import "common/error-details.proto";

message Payload {
    string email = 1;
    string username = 2;
}

message LoginResponse {
    Payload payload = 1;
    common.ErrorDetails details = 2;
}

message RegistrationResponse {
    Payload payload = 1;
    common.ErrorDetails details = 2;
}